objects/CR_Review_Trigger__mdt.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Queue__c</fullName>
        <description>Indicates the Queue this CR will go to</description>
        <label>Assigned Queue</label>
        <referenceTo>CR_Review_Queue_Priority__mdt</referenceTo>
        <relationshipLabel>CR Review Triggers</relationshipLabel>
        <relationshipName>CR_Review_Triggers</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comma_Seperated_Inspection_Types__c</fullName>
        <label>Comma Seperated Inspection Types</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Field__c</fullName>
        <label>Inspection Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Advanced_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Advanced Logic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prescreen_Reason__c</fullName>
        <label>Prescreen Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Query_Path__c</fullName>
        <label>Query Path</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trigger_Value__c</fullName>
        <label>Trigger Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value_Type__c</fullName>
        <label>Value Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Integer</fullName>
                    <default>true</default>
                    <label>Integer</label>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>CR Review Trigger</label>
    <listViews>
        <fullName>All_with_queue</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Active__c</columns>
        <columns>Assigned_Queue__c</columns>
        <columns>Value_Type__c</columns>
        <columns>Prescreen_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <label>All with queue</label>
    </listViews>
    <listViews>
        <fullName>Expanded_View_Active</fullName>
        <columns>MasterLabel</columns>
        <columns>Active__c</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Inspection_Field__c</columns>
        <columns>Query_Path__c</columns>
        <columns>Comma_Seperated_Inspection_Types__c</columns>
        <columns>Prescreen_Reason__c</columns>
        <columns>Trigger_Value__c</columns>
        <columns>Value_Type__c</columns>
        <columns>Assigned_Queue__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Expanded View - Active</label>
    </listViews>
    <listViews>
        <fullName>Inactive</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>Active__c</columns>
        <columns>Prescreen_Reason__c</columns>
        <columns>Assigned_Queue__c</columns>
        <columns>Value_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive</label>
    </listViews>
    <pluralLabel>CR Review Triggers</pluralLabel>
</CustomObject>